update content and links

--- a/index.html
+++ b/index.html
@@ -101,12 +101,15 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">Analytics Implementation Hub</a>
+            <a class="navbar-brand" href="#">Analytics Implementation Portfolio</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://dsergio.co/portfolio/site/projects/custom">David Sergio Portfolio</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#guides">Implementation Guides</a>
                     </li>
@@ -253,7 +256,7 @@
                         <div class="d-grid">
                             <a href="ga4_implementation_guide.html" class="btn btn-primary">View Guide</a>
                         </div>
-                        <p class="last-updated mt-3 mb-0">Last updated: March 15, 2024</p>
+                        <p class="last-updated mt-3 mb-0">Last updated: November 4, 2024</p>
                     </div>
                 </div>
             </div>
@@ -276,7 +279,7 @@
                         <div class="d-grid">
                             <a href="ios_tracking_guide.html" class="btn btn-primary">View Guide</a>
                         </div>
-                        <p class="last-updated mt-3 mb-0">Last updated: March 14, 2024</p>
+                        <p class="last-updated mt-3 mb-0">Last updated: November 14, 2024</p>
                     </div>
                 </div>
             </div>
@@ -299,7 +302,7 @@
                         <div class="d-grid">
                             <a href="google_ads_guide.html" class="btn btn-primary">View Guide</a>
                         </div>
-                        <p class="last-updated mt-3 mb-0">Last updated: March 13, 2024</p>
+                        <p class="last-updated mt-3 mb-0">Last updated: November 13, 2024</p>
                     </div>
                 </div>
             </div>
@@ -322,7 +325,7 @@
                         <div class="d-grid">
                             <a href="google_cdp_guide.html" class="btn btn-primary">View Guide</a>
                         </div>
-                        <p class="last-updated mt-3 mb-0">Last updated: March 16, 2024</p>
+                        <p class="last-updated mt-3 mb-0">Last updated: November 16, 2024</p>
                     </div>
                 </div>
             </div>
@@ -345,7 +348,7 @@
                         <div class="d-grid">
                             <a href="server_side_gtm_guide.html" class="btn btn-primary">View Guide</a>
                         </div>
-                        <p class="last-updated mt-3 mb-0">Last updated: March 16, 2024</p>
+                        <p class="last-updated mt-3 mb-0">Last updated: November 16, 2024</p>
                     </div>
                 </div>
             </div>
@@ -425,11 +428,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h5>Analytics Implementation Hub</h5>
+                    <h5>Analytics Implementation Portfolio</h5>
                     <p class="mb-0">A comprehensive guide to implementing analytics across platforms</p>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <p class="mb-0">Last Updated: March 15, 2024</p>
+                    <p class="mb-0">Last Updated: November 4, 2024</p>
                 </div>
             </div>
         </div>
