--- a/ios_tracking_guide.html
+++ b/ios_tracking_guide.html
@@ -32,7 +32,7 @@
      <!-- Navigation -->
      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Analytics Implementation Hub</a>
+            <a class="navbar-brand" href="index.html">Analytics Implementation Portfolio</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -333,10 +333,10 @@ Analytics.debug()</code></pre>
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p class="mb-0">Analytics Implementation Hub</p>
+                    <p class="mb-0">Analytics Implementation Portfolio</p>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <p class="mb-0">Last Updated: March 2024</p>
+                    <p class="mb-0">Last Updated: November 2024</p>
                 </div>
             </div>
         </div>
