--- a/requirements_gathering.html
+++ b/requirements_gathering.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Analytics Requirements Gathering and Planning">
     <meta name="author" content="Analytics Implementation Team">
-    <title>Analytics Requirements - Implementation Hub</title>
+    <title>Analytics Requirements - Implementation Portfolio</title>
     
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -73,7 +73,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Analytics Implementation Hub</a>
+            <a class="navbar-brand" href="index.html">Analytics Implementation Portfolio</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -238,10 +238,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p class="mb-0">Analytics Implementation Hub</p>
+                    <p class="mb-0">Analytics Implementation Portfolio</p>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <p class="mb-0">Last Updated: March 2024</p>
+                    <p class="mb-0">Last Updated: November 2024</p>
                 </div>
             </div>
         </div>
